feat(jobs): job priority — backend (#201)
## Summary

- Add `JobPriority` enum: `LOW`, `MEDIUM`, `HIGH`, `CRITICAL` (default
`MEDIUM`)
- Flyway migration `V003` adds `priority` column with CHECK constraint
and partial index
- `GET /api/projects/{id}/jobs?priority=HIGH` — filter by priority
(MEMBER-scoped)
- Jobs listed without filters are sorted by priority desc, then
created\_at desc
- `POST` and `PUT` endpoints accept `priority` field; `PUT` preserves
existing priority when omitted

## Test plan

- Unit tests: priority filter (OWNER + MEMBER), default/explicit
priority on create, update both branches
- Integration tests: priority filter, MEMBER scoping, create
default/explicit, update with/without priority

Closes #199