@@ -111,7 +111,7 @@ class DashboardServiceTest {
     @DisplayName("get — returns correct summary counts for all statuses")
     void get_shouldReturnCorrectSummaryCounts_whenProjectHasJobsInVariousStatuses() {
         List<JobModel> jobs = List.of(newJob, inProgressJob, blockedJobOlder, completedJob);
-        when(jobService.list(projectId, ownerId, null)).thenReturn(jobs);
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(jobs);
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -128,7 +128,7 @@ class DashboardServiceTest {
     @Test
     @DisplayName("get — returns blocked jobs sorted by blockedAt ascending (oldest first)")
     void get_shouldReturnBlockedJobs_sortedByBlockedAtAsc() {
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(blockedJobNewer, blockedJobOlder));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(blockedJobNewer, blockedJobOlder));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -136,14 +136,14 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getBlockedJobs()).hasSize(2);
-        assertThat(result.getBlockedJobs().get(0).getTitle()).isEqualTo("Blocked Older");
+        assertThat(result.getBlockedJobs().getFirst().getTitle()).isEqualTo("Blocked Older");
         assertThat(result.getBlockedJobs().get(1).getTitle()).isEqualTo("Blocked Newer");
     }
 
     @Test
     @DisplayName("get — returns overdue jobs sorted by deadline ascending (earliest deadline first)")
     void get_shouldReturnOverdueJobs_sortedByDeadlineAsc() {
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(overdueJobLater, overdueJobEarlier));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(overdueJobLater, overdueJobEarlier));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -151,14 +151,14 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getOverdueJobs()).hasSize(2);
-        assertThat(result.getOverdueJobs().get(0).getTitle()).isEqualTo("Overdue Earlier");
+        assertThat(result.getOverdueJobs().getFirst().getTitle()).isEqualTo("Overdue Earlier");
         assertThat(result.getOverdueJobs().get(1).getTitle()).isEqualTo("Overdue Later");
     }
 
     @Test
     @DisplayName("get — does not include completed jobs in overdue list even if past deadline")
     void get_shouldNotIncludeCompletedJobs_inOverdueList() {
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(overdueButCompletedJob, overdueJobEarlier));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(overdueButCompletedJob, overdueJobEarlier));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -166,7 +166,7 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getOverdueJobs()).hasSize(1);
-        assertThat(result.getOverdueJobs().get(0).getTitle()).isEqualTo("Overdue Earlier");
+        assertThat(result.getOverdueJobs().getFirst().getTitle()).isEqualTo("Overdue Earlier");
     }
 
     @Test
@@ -178,7 +178,7 @@ class DashboardServiceTest {
                 .blockedBy(ownerId).blockedAt(Instant.now().minus(3, ChronoUnit.DAYS))
                 .deadline(Instant.now().minus(1, ChronoUnit.DAYS)).build();
 
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(blockedAndOverdue));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(blockedAndOverdue));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -199,7 +199,7 @@ class DashboardServiceTest {
                 .requesterId(memberId).description("Need budget approval")
                 .status(ApprovalStatus.PENDING).requestedAt(Instant.now()).build();
 
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of());
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of());
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of(approval));
@@ -207,21 +207,21 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getPendingApprovals()).hasSize(1);
-        assertThat(result.getPendingApprovals().get(0).getDescription()).isEqualTo("Need budget approval");
+        assertThat(result.getPendingApprovals().getFirst().getDescription()).isEqualTo("Need budget approval");
         assertThat(result.getSummary().getPendingApprovalsCount()).isEqualTo(1);
     }
 
     @Test
     @DisplayName("get — returns empty pending approvals for MEMBER without calling ApprovalService")
     void get_shouldReturnEmptyPendingApprovals_whenCallerIsMember() {
-        when(jobService.list(projectId, memberId, null)).thenReturn(List.of(newJob));
+        when(jobService.list(projectId, memberId, null, null)).thenReturn(List.of(newJob));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, memberId))
                 .thenReturn(Optional.of(memberMembership));
 
         DashboardResponse result = dashboardService.get(projectId, memberId);
 
         assertThat(result.getPendingApprovals()).isEmpty();
-        assertThat(result.getSummary().getPendingApprovalsCount()).isEqualTo(0);
+        assertThat(result.getSummary().getPendingApprovalsCount()).isZero();
         verify(approvalService, never()).listPendingByProject(projectId, memberId);
     }
 
@@ -232,7 +232,7 @@ class DashboardServiceTest {
                 .id(UUID.randomUUID()).projectId(projectId).title("No Deadline")
                 .status(JobStatus.IN_PROGRESS).deadline(null).build();
 
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(noDeadline));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(noDeadline));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -240,7 +240,7 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getOverdueJobs()).isEmpty();
-        assertThat(result.getSummary().getOverdueCount()).isEqualTo(0);
+        assertThat(result.getSummary().getOverdueCount()).isZero();
     }
 
     @Test
@@ -251,7 +251,7 @@ class DashboardServiceTest {
                 .status(JobStatus.IN_PROGRESS)
                 .deadline(Instant.now().plus(5, ChronoUnit.DAYS)).build();
 
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(futureDeadline));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(futureDeadline));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -259,7 +259,7 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getOverdueJobs()).isEmpty();
-        assertThat(result.getSummary().getOverdueCount()).isEqualTo(0);
+        assertThat(result.getSummary().getOverdueCount()).isZero();
     }
 
     @Test
@@ -270,7 +270,7 @@ class DashboardServiceTest {
                 .status(JobStatus.NEW)
                 .deadline(Instant.now().minus(3, ChronoUnit.DAYS)).build();
 
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of(overdueNew));
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of(overdueNew));
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
@@ -278,21 +278,21 @@ class DashboardServiceTest {
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
         assertThat(result.getOverdueJobs()).hasSize(1);
-        assertThat(result.getOverdueJobs().get(0).getTitle()).isEqualTo("Overdue New Job");
+        assertThat(result.getOverdueJobs().getFirst().getTitle()).isEqualTo("Overdue New Job");
         assertThat(result.getSummary().getOverdueCount()).isEqualTo(1);
     }
 
     @Test
     @DisplayName("get — returns empty lists when project has no jobs")
     void get_shouldReturnEmptyDashboard_whenProjectHasNoJobs() {
-        when(jobService.list(projectId, ownerId, null)).thenReturn(List.of());
+        when(jobService.list(projectId, ownerId, null, null)).thenReturn(List.of());
         when(projectMemberRepository.findByProjectIdAndUserId(projectId, ownerId))
                 .thenReturn(Optional.of(ownerMembership));
         when(approvalService.listPendingByProject(projectId, ownerId)).thenReturn(List.of());
 
         DashboardResponse result = dashboardService.get(projectId, ownerId);
 
-        assertThat(result.getSummary().getTotal()).isEqualTo(0);
+        assertThat(result.getSummary().getTotal()).isZero();
         assertThat(result.getBlockedJobs()).isEmpty();
         assertThat(result.getOverdueJobs()).isEmpty();
         assertThat(result.getPendingApprovals()).isEmpty();
